<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.plus.wigwamnow.views.WigwamView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:wigwam="http://schemas.android.com/apk/res/com.google.plus.wigwamnow"
            android:id="@+id/detail_wigwam_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            wigwam:showDescription="false"
            wigwam:showPrice="false" >
        </com.google.plus.wigwamnow.views.WigwamView>

        <TextView
            style="@style/Separator"
            android:text="@string/price_separator" />

        <TextView
            android:id="@+id/detail_wigwam_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            style="@style/Separator"
            android:text="@string/description_separator" />

        <TextView
            android:id="@+id/detail_wigwam_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            style="@style/Separator"
            android:text="@string/availability_separator" />

        <ProgressBar
            android:id="@+id/availability_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/detail_listings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />

        <TextView
            style="@style/Separator"
            android:text="@string/action_separator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/rent"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/rental_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/rent_from"
                android:inputType="date" >
            </EditText>

            <EditText
                android:id="@+id/rental_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/rent_to"
                android:inputType="date" >
            </EditText>

            <Button
                android:id="@+id/rent_wigwam_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="24dp"
                android:text="@string/rent_wigwam_button"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            style="@style/Separator"
            android:text="@string/social_separator" />
        
         <Button
            android:id="@+id/structured_share_wigwam_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/share_wigwam_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/photo_wigwam_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</ScrollView>
